--- a/catalog.html
+++ b/catalog.html
@@ -33,14 +33,14 @@
         <a class="arrow" href="#"><img src="./img/arrow.png" alt="arrow" width="8" height="12"></a> 
         <p class="catalog-transparent">Catalog</p>
         <ul class="catalog-1">
-            <li class="catalog-item"><a href="#"><img src="./img/sweater.jpg" alt="sweater" width="280" height="270" ></a></li>
-            <li class="catalog-item"><a href="#"><img src="./img/sock.jpg" alt="sock" width="280" height="270"></a></li>
-            <li class="catalog-item"><a href="#"><img src="./img/deer.jpg" alt="deer" width="270" height="270"></a></li>
+            <li class="catalog-item"><img src="./img/sweater.jpg" alt="sweater" width="280" height="270" ><a href="#"> <p class="catalog-1__link">APPAREL <br> KIDS</p> </a></li>
+            <li class="catalog-item"><img src="./img/sock.jpg" alt="sock" width="280" height="270"><a href="#"><p class="catalog-1__link">HOLIDAY <br> SHOP</p> </a></li>
+            <li class="catalog-item"><img src="./img/deer.jpg" alt="deer" width="270" height="270"><a href="#"><p class="catalog-1__link">TOYS</p> </a></li>
         </ul>
         <ul class="catalog-2">
-            <li class="catalog-item"><a href="#"><img src="./img/man.jpg" alt="man" width="280" height="270"></a></li>
-            <li class="catalog-item"><a href="#"><img src="./img/flamingo.jpg" alt="flamingo"  width="280" height="270"></a></li>
-            <li class="catalog-item"><a href="#"><img src="./img/raincoat.jpg" alt="raincoat"  width="280" height="270"></a></li>
+            <li class="catalog-item"><a href="#"><img src="./img/man.jpg" alt="man" width="280" height="270"><p class="catalog-2__link">ACCESSORIES</p></a></li>
+            <li class="catalog-item"><a href="#"><img src="./img/flamingo.jpg" alt="flamingo"  width="280" height="270"><p class="catalog-2__link">SALE</p></a></li>
+            <li class="catalog-item"><a href="#"><img src="./img/raincoat.jpg" alt="raincoat"  width="280" height="270"><p class="catalog-2__link">APPAREL<br>ADULTS</p></a></li>
         </ul>
         <h2 class="description__title">Product description</h2>
         <div class="description">
