--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="css/common.css">
-<link rel="stylesheet" href="css/style__index.css">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,700&family=Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/common.css">
+<link rel="stylesheet" href="./css/style__index.css">
+<link rel="stylesheet" href="./css/normalize.css">
+<link rel="preconnect" href="./https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,700&family=Roboto&display=swap" rel="stylesheet">
     <title>Main</title>
 </head>
 <body>
@@ -174,10 +174,10 @@
                 </div>
                 <textarea class="textarea"  id="textarea" cols="30" rows="10"></textarea>
                 <div class="checkbox__wrapper">
-                <input class="checkbox" type="radio">
-                <p class="checkbox__text">By clicking on the button, you consent to the processing of your personal data</p>
+                <input class="checkbox" type="checkbox" id="radio">
+                <label class="checkbox__text" for="radio">By clicking on the button, you consent to the processing of your personal data</label>
                 </div>
-                <button type="submit">SUBMIT</button>
+                <button class="blackbutton checkbox-btn" type="submit">SUBMIT</button>
         </form>
     </div>
 </body>
