--- a/toys.html
+++ b/toys.html
@@ -4,116 +4,190 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="../css/common.css">
+<link rel="stylesheet" href="../css/style__index.css">
+<link rel="stylesheet" href="../css/normalize.css">
+<link rel="stylesheet" href="../css/style__toys.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,700&family=Roboto&display=swap" rel="stylesheet">
     <title>Main</title>
 </head>
 <body>
-    <header class="container">
-        <a href="#"><img src="./img/icon/DLC.svg" alt="dlc"></a>
-       <u>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Catalog</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#"></a>🔍</li>
-        <li><a href="#">Contact Us</a></li>
-    </u>
+    <header class=" header container">
+        <a href="#" class="header__link">
+            <img class="header__logo" src="./img/icon/DLC.svg" alt="dlc">
+        </a>
+        <nav class="header__nav left">
+       <ul class="header__list">
+        <li class="header__list-item"><a href="#">Blog</a></li>
+        <li class="header__list-item"><a href="#">Catalog</a></li>
+        <li class="header__list-item"><a href="#">About Us</a></li>
+    </nav>
+        <li class="header__list-item"><a href="#"></a><img src="img/icon/glass.svg" alt="glass"></li>
+        <li class="header__list-item contact"><a href="#">Contact Us</a></li>
+    </ul>
     </header>
     <main>
         <section class="container">
-        <h1>Toys for kids</h1>
-        Home → Catalog → Toys
-        <fieldset>
-            <label for="">Cost</label> 
-            0 <input type="range"> 500
-
-            <label for="">Color</label>
-            <ul>
-                <li><input type="checkbox">Black</li>
-                <li><input type="checkbox">Blue </li>
-                <li><input type="checkbox">Green</li>
-                <li><input type="checkbox">White</li>
-            </ul>
-             <p>Delivery</p>
+        <h1 class="toys__title">Toy for kids</h1>
+       <p class="toys__catalog"> Home <img src="./img/icon/arrow.svg" alt="arrow"> Catalog <img src="./img/icon/arrow.svg" alt="arrow"> Toys</p>
+        </section>
+        <div class="shopping">
+            <div class="cost">
+            <label class="cost-label" for="cost">Cost</label> 
+            <input class="cost-input" id="cost" type="range"> 
+            <div class="cost-price">
+            <p class="cost-price-0">0</p>
+            <p class="cost-price-500">500</p> 
+            </div>
+            </div>
+            <div class="color">
+                <ul class="color-list">
+                    <legend class="color-legend" >Color</legend>
+                    <li class="color-input">
+                        <input class="checkbox" id="black" name="color" type="checkbox"> 
+                            <label class="checkbox-label" for="black">Black</label>
+                        </li>
+                    <li class="color-input">
+                        <input class="checkbox" id="blue" type="checkbox">
+                        <label class="checkbox-label" for="blue"> Blue</label>
+                    </li>
+                    <li class="color-input">
+                        <input class="checkbox" id="green" type="checkbox">
+                       <label class="checkbox-label" for="green"> Green</label>
+                    </li>
+                    <li class="color-input">
+                        <input class="checkbox" id="white" type="checkbox">
+                       <label class="checkbox-label" for="white"> White</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="toys-delivery">
+             <legend class="toys-delivery-legend" >Delivery</legend>
              <ul>
-                <li><input type="radio">Free shipping</li>
-                <li><input type="radio">Fast shipping</li>
+                <li class="toys-shipping">
+                    <input class="shipping-input" id="free" type="radio">
+                    <label class="toys-delivery-label" for="free">Free shipping</label> 
+                </li>
+                <li class="toys-shipping">
+                    <input class="shipping-input" id="fast" type="radio">
+                    <label class="toys-delivery-label" for="fast">Fast shipping</label>
+                </li>
              </ul>
-             <label for=""> Amount</label>
-             <ul>
-                <li> <input type="radio"> 0-5</li>
-                <li> <input type="radio"> 10-20</li>
-                <li> <input type="radio"> 20-50</li>
+                </div>
+                <div class="amount">
+             <legend class="amount-legend">Amount</legend>
+             <ul class="amount-numbers">
+                <li><input class="amount-input" id="small"  type="radio"> <label class="amount-label" name="small" for="small"> 0-5</label></li>
+                <li><input class="amount-input" id="middle"  type="radio"> <label class="amount-label" name="middle" for="middle"> 10-20</label></li>
+                <li><input class="amount-input" id="large" type="radio"> <label class="amount-label" for="large"> 20-50</label></li>
              </ul>
-             <button type="submit">Apply</button>
-        </fieldset>
-    </section>
+            </div>
+             <button class="applybutton" type="submit">Apply</button>
+        </div>
     <section class="container">
-        <ul>
-            <li><a href="#"><img src="./img/sharky.jpg" alt="sharky" width="380" height="385" ></a></li>
-            <p>SHARKY BEAN BAG CHAIR COVER</p>
+        <ul class="toys-products">
+            <section class="products__list-1">
+            <li>
+                <a href="#"><img src="./img/sharky.jpg" alt="sharky" width="380" height="385" ></a>
+            <p class="price-title">SHARKY BEAN BAG CHAIR COVER</p>
             <p class="price">$60.00 USD</p>
-            <li><a href="#"><img src="./img/brass.jpg" alt="brass" width="380" height="385"></a></li>
-            <p>BRASS DECO FRAMES</p>
+        </li>
+            <li>
+                <a href="#"><img src="./img/brass.jpg" alt="brass" width="380" height="385"></a>
+            <p class="price-title">BRASS DECO FRAMES</p>
             <p class="price">$66.00 USD</p>
-            <li><a href="#"><img src="./img/apron.jpg" alt="apron" width="380" height="385"></a></li>
-            <p>CIBO FULL APRON</p>
+        </li>
+            <li>
+                <a href="#"><img src="./img/apron.jpg" alt="apron" width="380" height="385"></a>
+            <p class="price-title">CIBO FULL APRON</p>
             <p class="price">$60.00 USD</p>
-            <li><a href="#"><img src="./img/gacha.jpg" alt="gacha" width="380" height="385"></a></li>
-            <p>GATCHA GATCHA GUMBALL MACHINE</p>
-            <p class="price">$56.00 USD</p>
-            <li><a href="#"><img src="./img/candle.jpg" alt="candle" width="380" height="385"></a></li>
-            <p>CHRISTMAS ADVENT SCENTED CANDLE</p>
+        </li>
+            </section>
+            <section class="products__list-2">
+            <li>
+                <a href="#"><img src="./img/gacha.jpg" alt="gacha" width="380" height="385"></a>
+            <p class="price-title">GATCHA GATCHA GUMBALL MACHINE</p>
+            <p class="price">$56.00 USD</p></li>
+            <li>
+                <a href="#"><img src="./img/candle.jpg" alt="candle" width="380" height="385"></a>
+            <p class="price-title">CHRISTMAS ADVENT SCENTED CANDLE</p>
             <p class="price">$29.00 USD</p>
-            <li><a href="#"><img src="./img/light.jpg" alt="light" width="380" height="382"></a></li>
-            <p>TANGLE SPINNING TEA LIGHT</p>
+        </li>
+            <li>
+                <a href="#"><img src="./img/light.jpg" alt="light" width="380" height="382"></a>
+            <p class="price-title">TANGLE SPINNING TEA LIGHT</p>
             <p class="price">$56.00 USD</p>
+        </li>
+        </section>
         </ul>
-        ← 1 2 3 4 →
-    </section>
+        <div class="pointers">
+        <a class="toys-arrow-l"  href="#"><img src="./img/icon/arrow-l.svg" alt="arrow left"></a> 
+        <a class="toys-numbers" href="#">1</a> 
+        <a class="toys-numbers" href="#">2</a> 
+        <a class="toys-numbers" href="#">3</a> 
+        <a class="toys-numbers" href="#">4</a> 
+        <a class="toys-arrow-r"  href="#"><img src="./img/icon/arrow-r.svg" alt="arrow right"></a>
+        </div>
+        </section>
        
 
     </main>
-    <footer>
-        <section class="container">
-            <p>Navigation</p>
+    <footer class="footer">
+        <div class="container">
+        <div class="basement">
+            <section>
+            <p class="footer-item footer__title" >Navigation</p>
             <ul>
-            <li><a class="link" href="#">About Us</a></li>
-            <li><a class="link" href="#">Blog</a></li>
-            <li><a class="link" href="#">Design Services</a></li>
-            <li><a class="link" href="#">Featured On</a></li>
-            <li><a class="link" href="#">2018 Holiday Catalog</a></li>
-            <li><a class="link" href="#">Shop By Designer</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">About Us</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Blog</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Design Services</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Featured On</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">2018 Holiday Catalog</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Shop By Designer</a></li>
         </ul>
         </section>
-        <section class="container">
-            <p>Customer Information</p>
+        <section>
+            <p class="footer-item footer__title">Customer Information</p>
             <ul>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Sale Exclusions</a></li>
-            <li><a href="#">Shipping & Returns</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Search</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Contact Us</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Sale Exclusions</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Shipping & Returns</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Terms & Conditions</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Privacy Policy</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Search</a></li>
         </ul>
         </section>
-        <section class="container">
-            <p>Connect</p>
-            <input type="text">
-            <br>
-            <a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a>
-            <a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a>
-            <a href="#"><img src="./img/icon/pinterest.svg" alt="pinterest"></a>
-            <a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a>
-
+        <section >
+            <p class="footer-item footer__title">Connect</p>
+            <form action="" class="footer__form">
+            <input class="emailbutton" type="text">
+            <button class="joinbutton" type="submit" >JOIN</button>
+            </form>
+        
+            <a  href="#"><img class="scnetwork facebook" src="./img/icon/facebook.svg" alt="facebook"></a>
+            <a href="#"><img class="scnetwork twitter" src="./img/icon/twitter.svg" alt="twitter"></a>
+            <a href="#"><img class="scnetwork pinterest" src="./img/icon/pinterest.svg" alt="pinterest"></a>
+            <a href="#"><img class="scnetwork instagram" src="./img/icon/instagram.svg" alt="instagram"></a>
+        </div>
         </section>
-        <section class="container">
-            <p>Company Rating ★★★★★</p>
-            <p>Copyright © 2018 Dlk • Design Life Kids</p>
-            <p>Web Design — Direct Line Development</p>
-        </section>
+        <div >
+        <section class="bottom">
+            <fieldset class="rating">
+            <p class="bottom-item"> Company Rating
+                <input class="rating_star" type="radio" name="health" value="1" checked aria-label="atrocious">
+                <input class="rating_star" type="radio" name="health" value="2" aria-label="bad">
+                <input class="rating_star" type="radio" name="health" value="3" aria-label="okay">
+                <input class="rating_star" type="radio" name="health" value="4" aria-label="good">
+                <input class="rating_star" type="radio" name="health" value="5" aria-label="great">
+            </fieldset>
+            </p>
+            <p class="copyright bottom-item">Copyright © 2018 Dlk • Design Life Kids</p>
+            <p class="drline bottom-item">Web Design — Direct Line Development</p>
+                </section>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
