--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/style__catalog.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/style__catalog.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <title>Main</title>
 </head>
 <body>
     <header class=" header container">
         <a href="#" class="header__link">
-            <img class="header__logo" src="./img/icon/DLC.svg" alt="dlc">
+            <img class="header__logo" src="../img/icon/DLC.svg" alt="dlc">
         </a>
         <nav class="header__nav left">
        <ul class="header__list">
@@ -22,7 +22,7 @@
         <li class="header__list-item"><a href="#">Catalog</a></li>
         <li class="header__list-item"><a href="#">About Us</a></li>
     </nav>
-        <li class="header__list-item"><a href="#"></a><img src="img/icon/glass.svg" alt="glass"></li>
+        <li class="header__list-item"><a href="#"></a><img src="../img/icon/glass.svg" alt="glass"></li>
         <li class="header__list-item contact"><a href="#">Contact Us</a></li>
     </ul>
     </header>
@@ -30,17 +30,17 @@
         <section class="container">
         <h1 class="catalog__title">Category Products</h1>
         <p class="home">Home</p> 
-        <a class="arrow" href="#"><img src="./img/arrow.png" alt="arrow" width="8" height="12"></a> 
+        <a class="arrow" href="#"><img src="../img/arrow.png" alt="arrow" width="8" height="12"></a> 
         <p class="catalog-transparent">Catalog</p>
         <ul class="catalog-1">
-            <li class="catalog-item"><img src="./img/sweater.jpg" alt="sweater" width="280" height="270" ><a href="#"> <p class="catalog-1__link">APPAREL <br> KIDS</p> </a></li>
-            <li class="catalog-item"><img src="./img/sock.jpg" alt="sock" width="280" height="270"><a href="#"><p class="catalog-1__link">HOLIDAY <br> SHOP</p> </a></li>
-            <li class="catalog-item"><img src="./img/deer.jpg" alt="deer" width="270" height="270"><a href="#"><p class="catalog-1__link">TOYS</p> </a></li>
+            <li class="catalog-item"><img src="../img/sweater.jpg" alt="sweater" width="280" height="270" ><a href="#"> <p class="catalog-1__link">APPAREL <br> KIDS</p> </a></li>
+            <li class="catalog-item"><img src="../img/sock.jpg" alt="sock" width="280" height="270"><a href="#"><p class="catalog-1__link">HOLIDAY <br> SHOP</p> </a></li>
+            <li class="catalog-item"><img src="../img/deer.jpg" alt="deer" width="270" height="270"><a href="#"><p class="catalog-1__link">TOYS</p> </a></li>
         </ul>
         <ul class="catalog-2">
-            <li class="catalog-item"><a href="#"><img src="./img/man.jpg" alt="man" width="280" height="270"><p class="catalog-2__link">ACCESSORIES</p></a></li>
-            <li class="catalog-item"><a href="#"><img src="./img/flamingo.jpg" alt="flamingo"  width="280" height="270"><p class="catalog-2__link">SALE</p></a></li>
-            <li class="catalog-item"><a href="#"><img src="./img/raincoat.jpg" alt="raincoat"  width="280" height="270"><p class="catalog-2__link">APPAREL<br>ADULTS</p></a></li>
+            <li class="catalog-item"><img src="../img/man.jpg" alt="man" width="280" height="270"><a href="#"><p class="catalog-2__link">ACCESSORIES</p></a></li>
+            <li class="catalog-item"><img src="../img/flamingo.jpg" alt="flamingo"  width="280" height="270"><a href="#"><p class="catalog-2__link">SALE</p></a></li>
+            <li class="catalog-item"><img src="../img/raincoat.jpg" alt="raincoat"  width="280" height="270"><a href="#"><p class="catalog-2__link">APPAREL<br>ADULTS</p></a></li>
         </ul>
         <h2 class="description__title">Product description</h2>
         <div class="description">
@@ -82,22 +82,24 @@
             <input class="emailbutton" type="text">
             <button class="joinbutton" type="submit" >JOIN</button>
             </form>
-            <a  href="#"><img class="scnetwork facebook" src="./img/icon/facebook.svg" alt="facebook"></a>
-            <a href="#"><img class="scnetwork twitter" src="./img/icon/twitter.svg" alt="twitter"></a>
-            <a href="#"><img class="scnetwork pinterest" src="./img/icon/pinterest.svg" alt="pinterest"></a>
-            <a href="#"><img class="scnetwork instagram" src="./img/icon/instagram.svg" alt="instagram"></a>
+            <a  href="#"><img class="scnetwork facebook" src="../img/icon/facebook.svg" alt="facebook"></a>
+            <a href="#"><img class="scnetwork twitter" src="../img/icon/twitter.svg" alt="twitter"></a>
+            <a href="#"><img class="scnetwork pinterest" src="../img/icon/pinterest.svg" alt="pinterest"></a>
+            <a href="#"><img class="scnetwork instagram" src="../img/icon/instagram.svg" alt="instagram"></a>
         </div>
         </section>
         <div >
         <section class="bottom">
             <fieldset class="rating">
-            <p class="bottom-item"> Company Rating
-                <input class="rating_star" type="radio" name="health" value="1" checked aria-label="atrocious">
-                <input class="rating_star" type="radio" name="health" value="2" aria-label="bad">
-                <input class="rating_star" type="radio" name="health" value="3" aria-label="okay">
-                <input class="rating_star" type="radio" name="health" value="4" aria-label="good">
-                <input class="rating_star" type="radio" name="health" value="5" aria-label="great">
-            </fieldset>
+                <legend class="rating__caption">Company Rating</legend> 
+                <div class="rating__group">
+                   <input class="rating_star" type="radio" name="health" value="1" checked aria-label="atrocious">
+                   <input class="rating_star" type="radio" name="health" value="2" aria-label="bad">
+                   <input class="rating_star" type="radio" name="health" value="3" aria-label="okay">
+                   <input class="rating_star" type="radio" name="health" value="4" aria-label="good">
+                   <input class="rating_star" type="radio" name="health" value="5" aria-label="great">
+               </div>
+           </fieldset>
             </p>
             <p class="copyright bottom-item">Copyright © 2018 Dlk • Design Life Kids</p>
             <p class="drline bottom-item">Web Design — Direct Line Development</p>
