--- a/pages/toys.html
+++ b/pages/toys.html
@@ -16,7 +16,7 @@
 <body>
     <header class=" header container">
         <a href="#" class="header__link">
-            <img class="header__logo" src="./img/icon/DLC.svg" alt="dlc">
+            <img class="header__logo" src="../img/icon/DLC.svg" alt="dlc">
         </a>
         <nav class="header__nav left">
        <ul class="header__list">
@@ -24,14 +24,15 @@
         <li class="header__list-item"><a href="#">Catalog</a></li>
         <li class="header__list-item"><a href="#">About Us</a></li>
     </nav>
-        <li class="header__list-item"><a href="#"></a><img src="img/icon/glass.svg" alt="glass"></li>
+        <li class="header__list-item"><a href="#"></a><img src="../img/icon/glass.svg" alt="glass"></li>
         <li class="header__list-item contact"><a href="#">Contact Us</a></li>
     </ul>
     </header>
     <main>
         <section class="container">
         <h1 class="toys__title">Toy for kids</h1>
-       <p class="toys__catalog"> Home <img src="./img/icon/arrow.svg" alt="arrow"> Catalog <img src="./img/icon/arrow.svg" alt="arrow"> Toys</p>
+       <p class="toys__catalog"> <a href=""> Home</a> <a href="#" class="arrow"></a> Catalog <a href="#" class="arrow"> <a href=""> Toys</a>
+    </p>
         </section>
         <div class="shopping">
             <div class="cost">
@@ -67,11 +68,11 @@
              <legend class="toys-delivery-legend" >Delivery</legend>
              <ul>
                 <li class="toys-shipping">
-                    <input class="shipping-input" id="free" type="radio">
-                    <label class="toys-delivery-label" for="free">Free shipping</label> 
+                    <input class="shipping-input" id="free" name="shipping" type="radio">
+                    <label class="toys-delivery-label"  for="free">Free shipping</label> 
                 </li>
                 <li class="toys-shipping">
-                    <input class="shipping-input" id="fast" type="radio">
+                    <input class="shipping-input" id="fast" name="shipping" type="radio">
                     <label class="toys-delivery-label" for="fast">Fast shipping</label>
                 </li>
              </ul>
@@ -79,9 +80,9 @@
                 <div class="amount">
              <legend class="amount-legend">Amount</legend>
              <ul class="amount-numbers">
-                <li><input class="amount-input" id="small"  type="radio"> <label class="amount-label" name="small" for="small"> 0-5</label></li>
-                <li><input class="amount-input" id="middle"  type="radio"> <label class="amount-label" name="middle" for="middle"> 10-20</label></li>
-                <li><input class="amount-input" id="large" type="radio"> <label class="amount-label" for="large"> 20-50</label></li>
+                <li><input class="amount-input" id="small" name="amount" type="radio"> <label class="amount-label" name="small" for="small"> 0-5</label></li>
+                <li><input class="amount-input" id="middle" name="amount" type="radio"> <label class="amount-label" name="middle" for="middle"> 10-20</label></li>
+                <li><input class="amount-input" id="large"name="amount" type="radio"> <label class="amount-label" for="large"> 20-50</label></li>
              </ul>
             </div>
              <button class="applybutton" type="submit">Apply</button>
@@ -90,45 +91,45 @@
         <ul class="toys-products">
             <section class="products__list-1">
             <li>
-                <a href="#"><img src="./img/sharky.jpg" alt="sharky" width="380" height="385" ></a>
-            <p class="price-title">SHARKY BEAN BAG CHAIR COVER</p>
-            <p class="price">$60.00 USD</p>
+                <a href="#" class="products__picture" ><img  src="../img/sharky.jpg" alt="sharky" width="380" height="385" ></a>
+                <p class="price-title">SHARKY BEAN BAG CHAIR COVER</p>
+                <p class="price">$60.00 USD</p>
         </li>
             <li>
-                <a href="#"><img src="./img/brass.jpg" alt="brass" width="380" height="385"></a>
-            <p class="price-title">BRASS DECO FRAMES</p>
-            <p class="price">$66.00 USD</p>
+                <a href="#"><img src="../img/brass.jpg" alt="brass" width="380" height="385"></a>
+                <p class="price-title">BRASS DECO FRAMES</p>
+                <p class="price">$66.00 USD</p>
         </li>
             <li>
-                <a href="#"><img src="./img/apron.jpg" alt="apron" width="380" height="385"></a>
+                <a href="#"><img src="../img/apron.jpg" alt="apron" width="380" height="385"></a>
             <p class="price-title">CIBO FULL APRON</p>
             <p class="price">$60.00 USD</p>
         </li>
             </section>
             <section class="products__list-2">
             <li>
-                <a href="#"><img src="./img/gacha.jpg" alt="gacha" width="380" height="385"></a>
+                <a href="#"><img src="../img/gacha.jpg" alt="gacha" width="380" height="385"></a>
             <p class="price-title">GATCHA GATCHA GUMBALL MACHINE</p>
             <p class="price">$56.00 USD</p></li>
             <li>
-                <a href="#"><img src="./img/candle.jpg" alt="candle" width="380" height="385"></a>
+                <a href="#"><img src="../img/candle.jpg" alt="candle" width="380" height="385"></a>
             <p class="price-title">CHRISTMAS ADVENT SCENTED CANDLE</p>
             <p class="price">$29.00 USD</p>
         </li>
             <li>
-                <a href="#"><img src="./img/light.jpg" alt="light" width="380" height="382"></a>
+                <a href="#"><img src="../img/light.jpg" alt="light" width="380" height="382"></a>
             <p class="price-title">TANGLE SPINNING TEA LIGHT</p>
             <p class="price">$56.00 USD</p>
         </li>
         </section>
         </ul>
         <div class="pointers">
-        <a class="toys-arrow-l"  href="#"><img src="./img/icon/arrow-l.svg" alt="arrow left"></a> 
+        <a class="toys-arrow-l"  href="#"><img src="../img/icon/arrow-l.svg" alt="arrow left"></a> 
         <a class="toys-numbers" href="#">1</a> 
         <a class="toys-numbers" href="#">2</a> 
         <a class="toys-numbers" href="#">3</a> 
         <a class="toys-numbers" href="#">4</a> 
-        <a class="toys-arrow-r"  href="#"><img src="./img/icon/arrow-r.svg" alt="arrow right"></a>
+        <a class="toys-arrow-r"  href="#"><img src="../img/icon/arrow-r.svg" alt="arrow right"></a>
         </div>
         </section>
        
@@ -166,22 +167,24 @@
             <button class="joinbutton" type="submit" >JOIN</button>
             </form>
         
-            <a  href="#"><img class="scnetwork facebook" src="./img/icon/facebook.svg" alt="facebook"></a>
-            <a href="#"><img class="scnetwork twitter" src="./img/icon/twitter.svg" alt="twitter"></a>
-            <a href="#"><img class="scnetwork pinterest" src="./img/icon/pinterest.svg" alt="pinterest"></a>
-            <a href="#"><img class="scnetwork instagram" src="./img/icon/instagram.svg" alt="instagram"></a>
+            <a  href="#"><img class="scnetwork facebook" src="../img/icon/facebook.svg" alt="facebook"></a>
+            <a href="#"><img class="scnetwork twitter" src="../img/icon/twitter.svg" alt="twitter"></a>
+            <a href="#"><img class="scnetwork pinterest" src="../img/icon/pinterest.svg" alt="pinterest"></a>
+            <a href="#"><img class="scnetwork instagram" src="../img/icon/instagram.svg" alt="instagram"></a>
         </div>
         </section>
         <div >
         <section class="bottom">
             <fieldset class="rating">
-            <p class="bottom-item"> Company Rating
-                <input class="rating_star" type="radio" name="health" value="1" checked aria-label="atrocious">
-                <input class="rating_star" type="radio" name="health" value="2" aria-label="bad">
-                <input class="rating_star" type="radio" name="health" value="3" aria-label="okay">
-                <input class="rating_star" type="radio" name="health" value="4" aria-label="good">
-                <input class="rating_star" type="radio" name="health" value="5" aria-label="great">
-            </fieldset>
+                <legend class="rating__caption">Company Rating</legend> 
+                <div class="rating__group">
+                   <input class="rating_star" type="radio" name="health" value="1" checked aria-label="atrocious">
+                   <input class="rating_star" type="radio" name="health" value="2" aria-label="bad">
+                   <input class="rating_star" type="radio" name="health" value="3" aria-label="okay">
+                   <input class="rating_star" type="radio" name="health" value="4" aria-label="good">
+                   <input class="rating_star" type="radio" name="health" value="5" aria-label="great">
+               </div>
+           </fieldset>
             </p>
             <p class="copyright bottom-item">Copyright © 2018 Dlk • Design Life Kids</p>
             <p class="drline bottom-item">Web Design — Direct Line Development</p>
